data/derived/sp14/progs/unify/prog3709.ml.out
Characters 68-69:
  if b = b' then b else wwhile (f , b);;
                                ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
